# simplerandom-rs

./: .project  Cargo.toml  LICENSE.txt  README.md
src/: bitcolumnmatrix.rs  lib.rs  main.rs  maths.rs
tests/: test_bitcolumnmatrix.rs  test_lib.rs  test_maths.rs
