[package]
name = "simplerandom"
description = "Simple pseudo-random number generators"
version = "0.1.4"
authors = ["Craig McQueen <craig@mcqueen.au>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmcqueen/simplerandom-rs"
keywords = ["random", "rng"]
categories = ["algorithms"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[dependencies]
rand_core = "0.6.4"
num-traits = "0.2.19"
